fixed toast to not be left align and added icons/titles to feature cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,9 @@ a:hover {
 .toast {
     background-color: #FFE867;
 }
-
+.toast-body{
+    text-align: center;
+}
 .btn {
     margin-top: 8px;
     color: #FAF6F6;
@@ -180,6 +182,7 @@ a:hover {
 }
 .item-card-title{
     margin-top: 15px;
+    text-align: center;
 }
 
 /* start CAROUSEL styles */
